# ros_custom_packages

face_detect/: CMakeLists.txt  LICENSE  README.md  package.xml
face_detect/include/face_detect/: face_detect.h  face_detect_cuda.h
face_detect/launch/: face_detect.launch
face_detect/msg/: Face.msg  Faces.msg
face_detect/scripts/: test_visual_faces.py
face_detect/src/: face_detect.cpp  face_detect_cuda.cpp  face_detect_node.cpp
face_detect/src/test/: test_face_detect.cpp
face_detect/test/: test_face_detect_launch.test
ros_object_detection/: CMakeLists.txt  README.md  package.xml
ros_object_detection/include/object_detection/: object_detection.h
ros_object_detection/launch/: object_detection.launch
ros_object_detection/scripts/: darknet.py  region_loss.py  run_inference_yolo2.py  utils.py
ros_object_detection/src/: object_detection.cpp  object_detection_node.cpp
turtlebot_auto_drive/: CMakeLists.txt  README.md  package.xml
turtlebot_auto_drive/config/: config.yaml  train_config.yaml
turtlebot_auto_drive/launch/: autobot.launch  data_buffer.launch
turtlebot_auto_drive/scripts/: data_buffer.py  model_trainer.py  predict_twist.py  util_timesync_publisher.py  util_topic_stamper.py
turtlebot_auto_drive/srv/: DataBatch.srv  PredictTwist.srv
