<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_auto_drive</name>
  <version>0.0.0</version>
  <description>The turtlebot_auto_drive package</description>
  <maintainer email="tasuku@gmail.com">tasuku</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

  <export></export>
</package>
